[package]
name = "glh"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["opengl", "graphics", "gamedev"]
description = "OpenGL helper functions."
repository = "https://github.com/blindley/glh"
readme = "README.md"

[dependencies]
gl = "0.14"
stb_image = { version = "0.3.0", optional = true }


[features]
texture-loading = ["stb_image"]
